# fairGaurd

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_SCRIPT.md  FairGuard_Deployment_Guide.md  LICENSE  README.md  demo_video.md  docker-compose.yml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/auth/: jwt_handler.py  rbac.py
backend/app/models/: database.py  schemas.py
backend/app/routers/: audit.py  auth.py  decisions.py  drift.py  health.py  report.py  settings.py  stream.py  webhooks.py
backend/app/services/: bias_detector.py  causal_engine.py  compliance_report.py  corrector.py  counterfactual_engine.py  domain_registry.py  llm_service.py  threshold_config.py  webhook_dispatcher.py
data/: gen_startup_caches.py  prep_adult_data.py  retrain_model.py
docs/: api.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: BiasMetricsChart.tsx  CausalGraph.tsx  Dashboard.tsx  DecisionCard.tsx  DecisionFeed.tsx  DemoSimulator.tsx  ErrorBoundary.tsx  LandingPage.css  LandingPage.tsx  MetricsGaugePanel.tsx  StatsOverview.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAnalytics.ts  (+1 more)
sdk/: fairguard_sdk.py  pyproject.toml
tests/: benchmark_latency.py  conftest.py  load_test.py  test_bias_detection.py  test_bias_detector_unit.py  test_compas_domain.py  test_pipeline_integration.py  test_sdk_unit.py
(+16 files in other folders)
