[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fairguard-sdk"
version = "1.0.0"
description = "Python SDK for the FairGuard AI Fairness Firewall API"
readme = "README.md"
license = { file = "../LICENSE" }
authors = [{ name = "FairGuard Team" }]
keywords = ["fairness", "ai", "bias", "explainability", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "responses>=0.25.0"]

[project.urls]
Homepage   = "https://github.com/yourorg/fairguard"
Repository = "https://github.com/yourorg/fairguard"

[tool.setuptools.packages.find]
where = ["."]
include = ["fairguard_sdk*"]
